--- a/hagelly/index.html
+++ b/hagelly/index.html
@@ -3,80 +3,16 @@
 <head>
     <title>Horizontal gallery</title>
     <script type="text/javascript" src="./js/jquery-1.8.0.min.js"></script>
+    <script type="text/javascript" src="./js/event-dispatcher.js"></script>
+    <script type="text/javascript" src="./js/h-gallery.js"></script>
     <script type="text/javascript">
-
-
-        function createGallery(images) {
-
-            function setRowWidth(row, width) {
-                row.$row.width(width);
-                row.width = width;
-                return row
-            }
-
-            function alignRow(row) {
-                setRowWidth(row, row.$gContainer.width());
-                var alpha = 1.0 * (row.width - row.margin) / row.imagesWidth;
-                row.images.forEach(function (el) {
-                    el.$imgContainer.width(Math.floor(el.$img.width() * alpha));
-                    el.$img.css("margin-left", -Math.floor(el.$imgContainer.width() * (1.0 - alpha) / 2));
-                })
-            }
-
-            function createRow($gContainer) {
-                var $row = $("<div class='images-row'></div>").appendTo($gContainer);
-                var row = {$row: $row, $gContainer: $gContainer, images: []};
-                setRowWidth(row, $gContainer.width());
-                rows.push(row);
-                return row;
-            }
-
-            var     rowHeight = 200,
-                    $gContainer = $("#gallery-container").empty(),
-                    containerMargin = 5,
-                    currentContentWidth = 0,
-                    rows = [],
-                    currentRow = createRow($gContainer);
-
-            images.forEach(function (image) {
-                $('<img src="' + image.uri + '" alt="" height="' + rowHeight + 'px">').load(function () {
-                    var $img = $(this);
-                    var $imgContainer = $("<div class='image-container'></div>");
-                    currentRow.$row.append($imgContainer.append($img));
-                    var imgWidth = $img.width();
-                    currentRow.images.push({row: currentRow, $imgContainer: $imgContainer, $img: $img, imgWidth: imgWidth});
-                    currentContentWidth += imgWidth + containerMargin;
-                    if (currentContentWidth > currentRow.width) {
-
-                        var margin = containerMargin * currentRow.images.length;
-                        currentRow.imagesWidth = currentContentWidth - margin;
-                        currentRow.margin = margin;
-                        alignRow(currentRow);
-
-                        if (rows.length > 1 && currentRow.width < rows[rows.length - 2].width) {
-                            rows.forEach(function(row) {
-                                alignRow(row)
-                            })
-                        }
-
-                        currentRow = createRow($gContainer);
-                        currentContentWidth = 0;
-                    }
-                })
-            });
-            return $gContainer;
-        }
-
         $(function(){
             var images = [];
             var imagesCount = 29;
             for (var i = 1; i <= imagesCount; i++) {
                 images.push({uri: "./img/" + i + ".jpg"});
             }
-            createGallery(images);
-            $(window).resize(function() {
-                createGallery(images);
-            })
+            var hGallery = new HGallery(images, 200, 5);
         })
     </script>
     <style type="text/css">
@@ -93,11 +29,27 @@
             width: 100%;
             overflow-x: hidden;
         }
+
         .image-container {
             height: 200px;
             overflow: hidden;
             display: inline-block;
             margin-left: 5px;
+            cursor: pointer;
+        }
+        .full-view-container {
+            width: 100%;
+            height: 400px;
+            background: #a9a9a9;
+            margin: 10px 0 10px 5px;
+            padding: 10px 0 10px 0;
+            text-align: center;
+        }
+        .full-view-image {
+            height: 100%;
+            max-height: 400px;
+            margin: auto;
+            text-align: center;
         }
     </style>
 </head>
