Some improvements and removing scrollintoview becuase of resize issue

--- a/hagelly/index.html
+++ b/hagelly/index.html
@@ -37,14 +37,23 @@
             margin-left: 5px;
             cursor: pointer;
         }
+
         .full-view-container {
             width: 100%;
             height: 400px;
             background: #a9a9a9;
             margin: 10px 0 10px 5px;
-            padding: 10px 0 10px 0;
+            padding: 10px 10px 10px 10px;
             text-align: center;
         }
+
+        .full-view-image-wrapper {
+            height: 100%;
+            width: 75%;
+            text-align: center;
+            float: left;
+        }
+
         .full-view-image {
             height: 100%;
             max-height: 400px;
