Add container id to solve issue with multiple galleries on the page

--- a/hagelly/index.html
+++ b/hagelly/index.html
@@ -12,7 +12,7 @@
             for (var i = 1; i <= imagesCount; i++) {
                 images.push({uri: "./img/" + i + ".jpg"});
             }
-            var hGallery = new HGallery(images, 200, 5);
+            var hGallery = new HGallery("gallery-container", images, 200, 5);
         })
     </script>
     <style type="text/css">
